listar transacciones por cliente
